[backport] fixed arrow color on mobile view

--- a/public/src/v2/scss/components/_menu.scss
+++ b/public/src/v2/scss/components/_menu.scss
@@ -144,6 +144,10 @@ $navbar-toggler-border-radius: $btn-border-radius;
     display: none;
   }
 
+  .sprite-img._arrow-bottom {
+    fill: $white;
+  }
+
   ul {
     border-top: 1px solid $gray-disable-dark;
     list-style: none;
